Fix action buttons spacing
This is part of story #10062 Users & groups management overhaul

Buttons spacing should be:
- $tlp-spacing between the add-user form button and the import members
  button
- $tlp-half-spacing between other buttons

--- a/src/www/themes/BurningParrot/css/includes/project-admin/_members.scss
+++ b/src/www/themes/BurningParrot/css/includes/project-admin/_members.scss
@@ -25,13 +25,13 @@
     display: flex;
 }
 
-#project-admin-members-add-user-section {
-    margin-right: $tlp-double-spacing;
-}
-
 #project-admin-members-modal-buttons-section {
-    > :not(:first-child) {
+    > button:nth-child(2) {
         margin-left: $tlp-spacing;
+    }
+
+    > button:not(:nth-child(2)) {
+        margin-left: $tlp-half-spacing;
     }
 }
 
